# ai-coding-workshop-250712

./: .gitignore  CLAUDE.md  README.md  kb_ig_story_auto_reply_trigger_validation.md
.ai/kb/: auto_reply_240725.md  auto_reply_250716.md
.ai/prompt/: chat_conclusion.prompt.md  dev_with_kb.prompt.md  kb_extraction.prompt.md  kb_management.prompt.md  prd_spec_to_user_story.prompt.md  prd_update.prompt.md  prd_user_story_to_use_case.prompt.md
.cursor/rules/: feature_kb.mdc  go.mdc  python.mdc
.github/: pull_request_template.md
.github/instructions/: feature_kb.instructions.md  go.instructions.md  python.instructions.md
.github/wokflows/: bot_update_pr_description.yaml
.github/workflows/: bot_update_pr_description.yaml  go.yml  python_ci.yml
cheat_sheet/go/1_rewrite_brownfield/kb/: auto_reply_250707.md
cheat_sheet/go/2_extend_feature/: Makefile  go.mod
cheat_sheet/go/2_extend_feature/kb/: auto_reply_250707.md
cheat_sheet/python/1_rewrite_brownfield/: .python-version  demo_trigger_validation.py  pyproject.toml
cheat_sheet/python/1_rewrite_brownfield/kb/: auto_reply_250712.md
cheat_sheet/python/2_extend_feature/: env.example
go_src/: Makefile  go.mod  go.sum
go_src/cmd/app/: http.go  main.go
go_src/internal/adapter/repository/: auto_reply_repository.go
go_src/internal/app/: application.go
go_src/internal/app/auto_reply/: auto_reply_service.go  auto_reply_service_test.go
go_src/internal/app/service/: auto_reply_service.go  auto_reply_service_test.go
go_src/internal/router/: handler.go  middleware.go  middleware_logger.go  middleware_requestid.go  middleware_zwsp.go  middleware_zwsp_test.go  param_util.go  response.go
go_src/tasks/: todo.md
legacy/kb/: auto_reply.md  auto_reply_250716.md  channel_management.md  ig_story_auto_reply_trigger_validation.md  org_management.md
legacy/line/: constants.py  models.py  tasks.py
legacy/line/services/: __init__.py  webhook.py
legacy/line/utils/: cache.py
legacy/line/webhook/: base.py  trigger_v2.py
legacy/organization/: constants.py  models.py
python_src/: .python-version  Makefile  pyproject.toml  test_auto_reply_trigger.py
python_src/entrypoint/app/: http_server.py
python_src/internal/: __init__.py
python_src/internal/domain/: __init__.py
python_src/internal/domain/auto_reply/: __init__.py  auto_reply.py  events.py  keyword_matcher.py  priority_sorter.py  service.py  trigger_validation.py  trigger_validator.py  validate_trigger.py  webhook_event.py  webhook_trigger.py
python_src/internal/domain/common/: __init__.py  error_code.py  requestid.py
python_src/internal/domain/organization/: business_hour.py  business_hour_checker.py
python_src/internal/services/: __init__.py  auto_reply_service.py
python_src/tests/domain/: auto_reply_test.py  test_auto_reply.py  test_ig_story_trigger.py
python_src/tests/domain/auto_reply/: __init__.py  test_auto_reply.py  test_ig_story_features.py  test_keyword_matcher.py  test_priority_sorter.py  test_service.py  test_timezone_support.py  test_trigger_validation.py  test_trigger_validator.py  test_validate_trigger.py  test_webhook_trigger_schedule.py
python_src/tests/domain/common/: __init__.py
python_src/tests/services/: test_auto_reply_service.py
spec/: ig_story.json  prd-part1.md  prd-part2.md  prd.md
tutorials/: 1_rewrite_brownfield.md  2_extend_function.md  3_kb_extraction.md  4_chat_conclusion.md  5_personal_rules.md
(+62 files in other folders)
